--- a/src/styles/index.less
+++ b/src/styles/index.less
@@ -25,3 +25,13 @@
     height: 178px;
     display: block;
   }
+  // 在发布文章的时候生效
+  .article-container .ql-editor{
+    height: 300px;
+  }
+  .article-container .ql-toobar .ql-snow{
+    padding: 0 8px;
+  }
+  .image-container .el-dialog_footer{
+    text-align: center;
+  }
